--- a/Rastera/content/lumia-style/lumia.css
+++ b/Rastera/content/lumia-style/lumia.css
@@ -12,8 +12,8 @@ pre
 {
     margin: 0;
  
-    height:800px;
-    /*top: 0;   position: absolute;
+height:100%;
+    /*top: 0;       position: absolute;
     bottom: 0;
     left: 0;
     right: 0;*/
