--- a/Rastera/asnic/template/anti-docx.html
+++ b/Rastera/asnic/template/anti-docx.html
@@ -5,62 +5,60 @@
     <title></title>
     <script src="../../content/jquery/jquery-3.5.1.min.js"></script>
     <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
 
-<!--Dynamical token 闭包 for wraper asnic.codex
-导入excel csv
-[Solid.Dot.Geometric.Symbolics?~Media]Solid.Around.Shape.Word
+
+<div id="title" style="margin:0;padding:5px 0 0 10px;height:25px; width:100%; background-color:black;color:white; ">
+    附体记录生命体
+   <span style="float:right;padding-right:20px;">目录</span><!-- -->
+</div>
+<div id="contain" style="height:700px;">
+<pre id="editor">
+Editor:
+    Dynamical token 闭包 for wraper asnic.codex
+    导入excel csv
+    [Solid.Dot.Geometric.Symbolics?~Media]Solid.Around.Shape.Word
     //Geometric.朝向.Lez:[asdf]ksjflkjsdf[sdf[[sdfsdf],klsfdsdf(asdf)sajdfjlsd
     //标量回文Quota Priority limitation
     anti:flat-geometric letter symbol
     atlair:shape
     fusion:media to muti-feeling as a INDEX(can be compare to EnErgy )
-Split Substring Replace IndexOf LastIndexOf Padleft-->
-<div id="funcpad">
-    <span>File</span>
-    <span>View</span>
-    <span>Search</span>
-    <span>Help</span>
-</div>
-<div id="asnic">
-<pre id="editor">
+Split Substring Replace IndexOf LastIndexOf Padleft
 
-</pre>
-<div id="compiled">
-    <div id="console"></div>
-
-<!--    Offset x y z from generate svg
-    Linq as a SQL-->
-
-    <div id="tables"></div>
-
-
-<!--[SVG]Solid.Around.Shape.Word(flat|dimentional)
+Table:
+    Offset x y z from generate svg
+    Linq as a SQL
+Vector:
+    [SVG]Solid.Around.Shape.Word(flat|dimentional)
     起源 圆形表现用svg
-offset 
-调试转换 table to 
-[package-wraper]
+    offset 
+    调试转换 table to 
+    [package-wraper]
     namespace class struct 
-        循环 判断 算术 递归-->
-<div id="vector">
-<!--    <svg style="height:0%;"></svg>-->
-</div>
-
-</div>
-</div>
-<!--
+    循环 判断 算术 递归
+Commit:
     hidden submit
     单个火多个字符：盖帽 分隔符
--->
-<div id="status">
-    723.328
+</pre>
+<div id="compiler">
+    <div id="console"></div>
+    <div id="table"></div>
+    <div id="vector">
+    <!--<svg style="height:0%;"></svg>-->
+    </div>
 </div>
+<div id="commit">
+    <div id="compiled" desc="&234"></div>
+</div>
+</div>
+
 <div id="java">
     <script src="../../content/ace-editor/ace.js"></script>
     <script src="../../content/ace-editor/ace-settings.js"></script>
     <script type="text/javascript">
-      
     </script>
 </div>
 </body>
