--- a/Rastera/content/lumia-style/lumia.css
+++ b/Rastera/content/lumia-style/lumia.css
@@ -23,7 +23,7 @@ height:100%;
     border: 1px solid black;
     font-size:small;
 }
-/*div 
+#commit 
 {
-    border: 1px solid black;
-}*/
+   display:none;
+}
