--- a/Rastera/content/lumia-style/lumia.css
+++ b/Rastera/content/lumia-style/lumia.css
@@ -11,9 +11,10 @@ pre
 #editor 
 {
     margin: 0;
- 
-height:100%;
-    /*top: 0;       position: absolute;
+    height:500px;
+ /*
+
+    top: 0;       position: absolute;
     bottom: 0;
     left: 0;
     right: 0;*/
