--- a/Rastera/asnic/template/anti-docx.html
+++ b/Rastera/asnic/template/anti-docx.html
@@ -13,35 +13,11 @@
 
 <div id="title" style="margin:0;padding:5px 0 0 10px;height:25px; width:100%; background-color:black;color:white; ">
     附体记录生命体 
-   <span style="float:right;padding-right:20px;">目录</span><!-- -->
+   <span style="float:right;padding-right:20px;"> <b style="color:gainsboro">Φ</b> 编译</span><!-- -->
 </div>
-<div id="contain" style="height:700px;">
+<div id="contain" style="height:1000px;">
 <pre id="editor">
-Editor:
-    Dynamical token 闭包 for wraper asnic.codex
-    导入excel csv
-    [Solid.Dot.Geometric.Symbolics?~Media]Solid.Around.Shape.Word
-    //Geometric.朝向.Lez:[asdf]ksjflkjsdf[sdf[[sdfsdf],klsfdsdf(asdf)sajdfjlsd
-    //标量回文Quota Priority limitation
-    anti:flat-geometric letter symbol
-    atlair:shape
-    fusion:media to muti-feeling as a INDEX(can be compare to EnErgy )
-Split Substring Replace IndexOf LastIndexOf Padleft
 
-Table:
-    Offset x y z from generate svg
-    Linq as a SQL
-Vector:
-    [SVG]Solid.Around.Shape.Word(flat|dimentional)
-    起源 圆形表现用svg
-    offset 
-    调试转换 table to 
-    [package-wraper]
-    namespace class struct 
-    循环 判断 算术 递归
-Commit:
-    hidden submit
-    单个火多个字符：盖帽 分隔符
 </pre>
 <div id="compiler">
     <div id="console"></div>
@@ -59,6 +35,7 @@ Commit:
     <script src="../../content/ace-editor/ace.js"></script>
     <script src="../../content/ace-editor/ace-settings.js"></script>
     <script type="text/javascript">
+       // Asnical = 
     </script>
 </div>
 </body>
