--- a/Rastera/content/lumia-style/lumia.css
+++ b/Rastera/content/lumia-style/lumia.css
@@ -11,10 +11,10 @@ pre
 #editor 
 {
     margin: 0;
-    height:500px;
+    height:800px;
  /*
-
-    top: 0;       position: absolute;
+  position: absolute;
+    top: 0;     
     bottom: 0;
     left: 0;
     right: 0;*/
