--- a/Rastera/asnic/template/format.html
+++ b/Rastera/asnic/template/format.html
@@ -5,52 +5,63 @@
     <title></title>
 
 <link href="../../content/lumia-style/lumia.css" rel="stylesheet" />
+   
 </head>
 <body>
- 
+
 <pre id="editor">
-//metric symbolic shape
-//triangle
-//square
-//rect
-//diamond squarely rotated
-//图罗列循环 判断 算术 递归 举例 
-Date:89A-12-7ca    
-    .//谁的 对象
-    :// 解释 变量
-    ~
-        "对话目前下挫一行"
-    ------------------------
+
+metric symbolic shape
+triangle
+square
+rect
+diamond squarely rotated
+图罗列循环 判断 算术 递归 举例  
+编译分析 换行 不换行
+键盘:数字 字母 文字 符号
+
+| 分隔符
+[]//括号 起始 
+    函数 结束
+.//谁的 对象
+://多个对象回车 解释 变量 Date:89A-12-7ca   
+~
+ 随便写优先
+【Who】：字母：文字。其他？不是
+    数字
+    符号 //复杂
+"对话目前下挫一行"
+------------------------
   
-    lz:
-    lz:
-    ask
-        "hello world"
-        "good byd"
-    bced
-        "hao"
-    asdf
-        "ceshi"
-    asdf.drawsword
-        "say something"
+lz:
+lz:
+ask
+    "hello world"
+    "good byd"
+bced
+    "hao"
+asdf
+    "ceshi"
+asdf.drawsword
+    "say something"
         
-    ------------------------
-    [samed]
-    [world]
-    (oooooo)
-    (oooooo)
-    (oooooo)
-    //什么标签适合两次书写
-    >> abc
-    >> 123
-    >> 汉子阿斯蒂芬
-    //Solid.Metric
-    //键盘:数字 字母 文字 符号
-    [1]<4>(8)(O)<☆>
-    |范|德|萨|
-    |范|德|萨|
-    |范|德|萨|
-    |范|德|萨|
+------------------------
+[samed]
+[world]
+(oooooo)
+(oooooo)
+(oooooo)
+//什么标签适合两次书写
+>> abc
+>> 123
+>> 汉子阿斯蒂芬
+//Solid.Metric
+
+[1]<4>(8)(O)<☆>
+|范|德|萨|
+|范|德|萨|
+|范|德|萨|
+|范|德|萨|
         
 </pre>
      
