--- a/Rastera/asnic/template/anti-docx.html
+++ b/Rastera/asnic/template/anti-docx.html
@@ -11,10 +11,10 @@
 <body>
 
 
-<div id="title" style="margin:0;padding:5px 0 0 10px;height:25px; width:100%; background-color:black;color:white; ">
+<!--<div id="title" style="margin:0;padding:5px 0 0 10px;height:25px; width:100%; background-color:black;color:white; ">
     附体记录生命体 
-   <span style="float:right;padding-right:20px;"> <b style="color:gainsboro">Φ</b> 编译</span><!-- -->
-</div>
+   <span style="float:right;padding-right:20px;"> <b style="color:gainsboro">Φ</b> 编译</span>
+</div>-->
 <div id="contain" style="height:1000px;">
 <pre id="editor">
 </pre>
