--- a/Rastera/content/lumia-style/lumia.css
+++ b/Rastera/content/lumia-style/lumia.css
@@ -9,11 +9,11 @@ pre
     font-size:medium;
     font-family:黑体 Verdana
 }
-#editor 
-{
+#editor {
+    font-size: 14px;
     margin: 0;
-    height:900px;/**/
- /*
+    height: 900px; /**/
+    /*
   position: absolute;
     top: 0;     
     bottom: 0;
