--- a/AngelNetwork/views/html_test.html
+++ b/AngelNetwork/views/html_test.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title></title> 
     <script src="../content/jquery/jquery-3.5.1.min.js"></script>
-    <script src="../content/tmpl/jquery.tmpl.min.js"></script>
+    <script src="../content/tmpl/jquery.tmpl.min.js"></script> 
 </head>
 <body>
     <div id="tmpl"></div>
@@ -16,8 +16,7 @@
         </div>
     </script>
     <script id="category" type="type/x-jquery-tmpl">
-       
-    {{each  category}}
+        {{each  category}}
        <option> ${name}  </option>
         {{/each}}   
     </script>
@@ -45,7 +44,7 @@
            
         ];
     
-        $("#tmpl1").tmpl(users).appendTo('#tmpl');
+      //  $("#tmpl1").tmpl(users).appendTo('#tmpl');
         category = [{ id: 1, name: "姐姐哎腾", },]
      
         $("#tmpl1").tmpl(asdf).appendTo('#tmpl');
@@ -60,6 +59,8 @@
         $("#tmpl1").tmpl(asdf).appendTo('#tmpl'); 
         $("#tmpl1").tmpl(asdf).appendTo('#tmpl'); 
         $("#tmpl1").tmpl(asdf).appendTo('#tmpl'); 
-        $("#tmpl1").tmpl(asdf).appendTo('#tmpl');     </script>
+        $("#tmpl1").tmpl(asdf).appendTo('#tmpl');   
+
+    </script>
 </body>
 </html>
